@@ -6,11 +6,26 @@ class PublicSuffixService::DomainTest < Test::Unit::TestCase
     @klass = PublicSuffixService::Domain
   end
 
-  def test_domain_to_labels
-    assert_equal  %w{com live spaces someone},
-                  PublicSuffixService::Domain.domain_to_labels('someone.spaces.live.com')
-    assert_equal  %w{com zoho wiki leontina23samiko},
-                  PublicSuffixService::Domain.domain_to_labels('leontina23samiko.wiki.zoho.com')
+  # Tokenizes given input into labels.
+  def test_self_domain_to_labels
+    assert_equal  %w( com live spaces someone ),
+                  PublicSuffixService::Domain.domain_to_labels("someone.spaces.live.com")
+    assert_equal  %w( com zoho wiki leontina23samiko ),
+                  PublicSuffixService::Domain.domain_to_labels("leontina23samiko.wiki.zoho.com")
+  end
+
+  # Converts input into String.
+  def test_self_domain_to_labels_converts_input_to_string
+    assert_equal  %w( com live spaces someone ),
+                  PublicSuffixService::Domain.domain_to_labels(:"someone.spaces.live.com")
+  end
+
+  # Ignores trailing .
+  def test_self_domain_to_labels_ignores_trailing_dot
+    assert_equal  %w( com live spaces someone ),
+                  PublicSuffixService::Domain.domain_to_labels("someone.spaces.live.com")
+    assert_equal  %w( com live spaces someone ),
+                  PublicSuffixService::Domain.domain_to_labels(:"someone.spaces.live.com")
   end
 
 
