@@ -4,6 +4,8 @@
 
 * CHANGED: Update public suffix list to d1a5599b49fa 2010-10-25 15:10 +0100 (#9)
 
+* NEW: Add support for Fully Qualified Domain Names (#7)
+
 
 == Release 0.7.0
 
